--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,18 @@
 body {
-  background-color: #ff0000;
-  color: #0000FF;
+  background-color: #3537e6;
+  color: #FFFFFF;
+  font-size: 1.3em;
+  font-family: sans-serif;
+}
+
+a{
+  text-decoration: none;
+  color: #FFFFFF;
+  font-style:normal;
+  }
+
+a:hover {
+  text-shadow: 3px 3px 2px #afaeaf;
 }
 
 nav {
@@ -8,6 +20,41 @@ nav {
   float: left;
   position: fixed;
   width: 100%;
+}
+
+h1 {
+  font-size: 3rem;
+  font-weight: 700;
+}
+
+h3 {
+  font-size: 1rem;
+  padding-top: 12px;
+  line-height: 1.2rem;
+  font-weight: 500;
+  font-style: italic;
+
+}
+
+figure{
+  align:center;
+}
+
+figcaption{
+  font-size: .825rem;
+  padding-top: 5px;
+  padding-bottom: 15px;
+}
+
+p {
+  padding-bottom: 7.5px;
+  font-size: 1.25rem;
+  padding-top: 7.5px;
+  line-height: 1.5rem;
+}
+
+#end {
+  padding-bottom: 40px;
 }
 
 .logo {
@@ -23,6 +70,10 @@ nav {
   width: 70%;
 }
 
+.small-pic {
+  width: 50%;
+}
+
 .left, .right {
   float: left;
   width: 50%;
@@ -35,6 +86,9 @@ nav {
 ul {
   list-style-type: none;
   float: right;
+  font-size: 1.2rem;
+  font-style: italic;
+
 }
 
 li {
@@ -49,4 +103,31 @@ article {
 .container {
   margin: 0 auto;
   width: 50%;
+}
+
+.author{
+  padding-top: 20px;
+  padding-bottom: 10px;
+}
+
+.spacer{
+  padding-top: 50px;
+}
+
+.spacer2{
+  padding-top: 30px;
+}
+
+.emphasize{
+  padding-top: 30px;
+  font-style: italic;
+  padding-left: 30px;
+
+}
+
+.emphspan {
+  font-weight: 600;
+
+  color: #fce21b;
+
 }
